--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@phosphor-icons/react": "^2.1.3",
+    "@radix-ui/react-slot": "^1.0.2",
     "@tanstack/react-query": "^5.20.5",
     "axios": "^1.6.7",
     "class-variance-authority": "^0.7.0",
