--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.330.0",
     "next": "14.1.0",
+    "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
