--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "clsx": "^2.1.0",
     "date-fns": "^3.3.1",
     "framer-motion": "^11.0.6",
-    "next": "14.1.0",
+    "next": "^14.2.5",
     "nextjs-progressbar": "^0.0.16",
     "react": "^18",
     "react-dom": "^18",
