--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.2.1",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "use-debounce": "^10.0.2"
   },
   "devDependencies": {
     "@rocketseat/eslint-config": "^2.2.2",
